Applying different encodings and study the impact on catboost model

--- a/catboost.ipynb
+++ b/catboost.ipynb
@@ -2517,7 +2517,9 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -2685,6 +2687,40 @@
     "\n",
     "df_train.head()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Training a catboost model with whole train data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_le = CatBoostClassifier(iterations=2000, learning_rate=0.1, depth=8, thread_count=5, verbose=100 ,cat_features=cat_features)\n",
+    "model_le.fit(X, y, verbose=False, early_stopping_rounds=100) # use_best_model=True can only be used with nonempty eval_set."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res_le = model_le.predict(df_test)\n",
+    "res_le"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
